# damiao_hscant

./: .gitmodules  CMakeLists.txt  MOTOR_NODE_README.md  README  README.md  main.cpp  package.xml
conf/: damiao_foot.yaml  damiao_wheel.yaml  motors.yaml  rs_mix.yaml  rs_wheel.yaml
include/: HSCanT.h  SerialPort.h  damiao.h  motor.h
launch/: motor_node.launch  motor_node.launch.py  setup_node.launch  setup_node.launch.py
msg/: Command.msg  State.msg
scripts/: setup_can.sh
src/: damiao.cpp  dm_node.cpp  motor.cpp  motor_node.cpp  rs_node.cpp  test_damiao.cpp
tests/: test_damiao.cpp
